First draft of JupyterCon talk

--- a/assets/style.css
+++ b/assets/style.css
@@ -107,8 +107,8 @@ a:hover {
 
 strong {
     color: #d11a01;
-    font-style: normal;
-    font-weight: normal;
+    //font-style: normal;
+    //font-weight: normal;
 }
 
 ul > li, ol > li {
